cmake_minimum_required(VERSION 3.27)
project(cpp_projects)

set(CMAKE_CXX_STANDARD 17)

add_executable(cpp_projects main.cpp
        lab_5/task_1.cpp
        lab_5/task_2.cpp
        lab_5/task_3.cpp
        lab_4/task_1.cpp
        lab_4/task_2.cpp
        lab_4/task_3.cpp
        lab_4/task_4.cpp
)
