cmake_minimum_required(VERSION 3.27)
project(cpp_projects)

set(CMAKE_CXX_STANDARD 17)

add_executable(cpp_projects
        sem_1/lab_5/task_1.cpp
        sem_1/lab_5/task_2.cpp
        sem_1/lab_5/task_3.cpp
        sem_1/lab_4/task_1.cpp
        sem_1/lab_4/task_2.cpp
        sem_1/lab_4/task_3.cpp
        sem_1/lab_4/task_4.cpp
        sem_1/lab_3/task_1.cpp
        sem_1/lab_3/task_2.cpp
        sem_1/lab_3/task_3.cpp
        sem_1/lab_3/task_4.cpp
        sem_1/lab_6/task_1.cpp
        sem_1/lab_6/task_2.cpp
        sem_1/lab_6/task_3.cpp
        sem_1/lab_6/task_4.cpp
        util.cpp
        sem_2/lab_1/task_1.cpp
        sem_2/lab_1/task_2.cpp

)
